--- a/src/styles/Cells.scss
+++ b/src/styles/Cells.scss
@@ -21,6 +21,8 @@
   .icon {
     display: inline-block;
     margin: 0 auto;
+    width: 80%;
+    height: 80%;
   }
 
   &-hidden {
